<resources>
    <string name="app_name">Prepositions</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="title_activity_main_screen">Exercises</string>
    <string name="question">The book is _____ the table.</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="title_activity_progress_screen">My Progress</string>
    <string name="title_activity_feedback_screen">FeedbackScreen</string>
    <string name="invite_friend">Invite a Friend</string>
    <string name="clear_progress">Clear My Progress</string>
    <string name="banner_ad_unit_id">ca-app-pub-5739869500751104/4893869472</string>
    <string name="between_questions">ca-app-pub-5739869500751104/1800802279</string>



</resources>